# PN-Method

./: .gitignore  README.md
arxiv/: paper.bbl  paper.tex
cpp/adrrs/: adrrs.pro
cpp/gpu/: gpu.pro  main.cpp  vectorAddition.cu
cpp/pnb_cpp/: CMakeLists.txt
cpp/pnb_cpp/include/: PNSystem.h
cpp/pnb_cpp/include/common/: Domain.h  GridLocation.h
cpp/pnb_cpp/include/field/: CoefficientGrid.h  Constant.h  Field.h  Function.h  SHEXP.h  VoxelGrid.h
cpp/pnb_cpp/include/math/: rng.h  sph.h
cpp/pnb_cpp/src/: PNSystem.cpp  main.cpp  stencil.cpp  stencil_term4.cpp
cpp/pnb_cpp/src/common/: GridLocation.cpp
cpp/pnb_cpp/src/field/: CoefficientGrid.cpp  Constant.cpp  Function.cpp  SHEXP.cpp  VoxelGrid.cpp
cpp/pnsolver/: CMakeLists.txt  CMakeLists.txt.user.old
cpp/pnsolver/include/: FLDSolver.h  MultigridSolver.h  PNSolution.h  PNSystem.h  PNVolume.h  mgtest.h  solver.h
cpp/pnsolver/include/common/: Domain.h
cpp/pnsolver/include/field/: Constant.h  Field.h  Function.h  SHEXP.h  VoxelGrid.h  VoxelGridField.h
cpp/pnsolver/include/fields/: Field.h  VoxelGridField.h
cpp/pnsolver/include/math/: common.h  frame.h  pcf.h  sph.h  vector.h
cpp/pnsolver/include/util/: mem.h  threadpool.h  voxelgrid.h
cpp/pnsolver/src/: FLDSolver.cpp  MultigridSolver.cpp  PNSolution.cpp  PNSystem.cpp  PNSystem.cpp.autosave  PNVolume.cpp  main.cpp  mgtest.cpp  solver.cpp  stencil.cpp  stencil2_fopn_p1_cg.cpp  stencil2_fopn_p1_sg.cpp  stencil2_fopn_p3_sg.cpp  stencil2_fopn_p5_sg.cpp  stencil2_fopn_p5_sg_correct.cpp  stencil_cda.cpp  stencil_fopn_p0_cg.cpp  stencil_fopn_p0_sg.cpp  stencil_fopn_p1_cg.cpp  stencil_fopn_p1_sg.cpp  stencil_fopn_p1_sg_org.cpp  stencil_fopn_p2_cg.cpp  stencil_fopn_p2_sg.cpp  stencil_fopn_p3_cg.cpp  stencil_fopn_p3_sg.cpp  stencil_fopn_p4_cg.cpp  stencil_fopn_p4_sg.cpp  stencil_fopn_p5_cg.cpp  stencil_fopn_p5_sg.cpp  stencil_org.cpp  stencil_p1_2d_cg.cpp  stencil_p1_2d_sg.cpp  stencil_p1_3d_cg.cpp  stencil_p1_3d_sg.cpp  stencil_p2_3d_cg.cpp  stencil_p2_3d_sg.cpp  stencil_p3_3d_cg.cpp  stencil_p3_3d_sg.cpp  stencil_p4_3d_cg.cpp  stencil_p4_3d_sg.cpp  (+16 more)
cpp/pnsolver/src/common/: Domain.cpp
cpp/pnsolver/src/field/: Field.cpp  SHEXP.cpp
cpp/pnsolver/src/fields/: VoxelGridField.cpp
cpp/pnsolver/src/math/: sph.cpp
cpp/pnsolver/src/util/: mem.cpp  threadpool.cpp
cpp/renderer/: CMakeLists.txt
cpp/renderer/include/: Field.h  Image.h  PNSolution.h  camera.h  integrator.h  light.h  scene.h  volume.h
cpp/renderer/include/fields/: ConstantField.h  VoxelGridField.h
cpp/renderer/include/integrators/: directpn.h  jispt.h  pnispt.h  simplept.h
cpp/renderer/include/lights/: directionallight.h  pointlight.h
cpp/renderer/include/math/: color.h  common.h  shvector.h  sph.h  transform.h  vector.h
cpp/renderer/include/util/: threadpool.h  voxelgrid.h
cpp/renderer/src/: Image.cpp  Integrator.cpp  PNSolution.cpp  main.cpp  scene.cpp  volume.cpp
cpp/renderer/src/fields/: VoxelGridField.cpp
cpp/renderer/src/integrators/: directpn.cpp  jispt.cpp  pnispt.cpp  simplept.cpp
cpp/renderer/src/lights/: directionallight.cpp  pointlight.cpp
cpp/renderer/src/math/: shvector.cpp  sph.cpp  sph_.cpp
cpp/renderer/src/util/: threadpool.cpp  voxelgrid.cpp
cpp/solver/: CMakeLists.txt
cpp/solver/include/math/: bbox.h  color.h  common.h  dpdf.h
cpp/solver/include/util/: dda2d.h
cpp/solver/src/: main.cpp
cpp/solver/src/util/: dda2d.cpp
cpp/solver/test/: test.py  test_advection_2d.py  test_diffusion_2d.py  util.py
cpp/testrenderer/: testrenderer.pro  testrenderer.pro.user_sdfsdf
latex/egsr17-cgf/: bibliography.bib  conclusion.tex  eg2017.sty  egpubl.cls  egsr17-e.sty  egsr17.sty  egsr18-e.sty  egsr18.sty  introduction.tex  macros.tex  main-body.tex  main-sub.tex  make_clean.bat  paper.tex  pn_equations.tex  previous_work.tex  rendering.tex  results.tex  section_car.tex  section_conclusion.tex  section_discretized_rte.tex  section_real_valued_pn_equations.tex  section_results.tex  solver.tex
notebooks/: Untitled.ipynb  anisotropic_absorption_2d.ipynb  debugging_lspn.ipynb  pnb_test.py  slab_geometry_PN.ipynb  starmap_extensions_arte_study.ipynb  transport_equation_second_order_forms.ipynb  visualizations.ipynb
notebooks/pnb/: debug_term.py  stencil.py  util.py
python/: 17_06_20_aachen_visit_minutes.ipynb  SlicePlot.ipynb  Untitled.ipynb  advection_2d.ipynb  advection_2d_anisotropic.ipynb  advection_2d_anisotropic_discretization.ipynb  anisotropic_absorption_2d.ipynb  boundary_conditions.ipynb  cas.py  debug_term.py  debugging_lspn.ipynb  diffusion_1d.ipynb  first_order_pn_finite_differences.ipynb  least_quares_pn_with_finite_differences.ipynb  lspn.py  moment_expansion_2d.ipynb  overview_deterministic_methods.ipynb  p1_1d.ipynb  p1_2d.ipynb  pn_finite_differences.ipynb  pnb_test.py  pnbuilder.py  problems.py  rbf_derivatives.ipynb  relationship_sh_moment_expansion.ipynb  second_order_form_factorization.py  sggx2d.ipynb  sggx_sh.ipynb  shtools.py  simplePN.py  spherical_harmonics_method.ipynb  spherical_harmonics_method_2d.ipynb  spherical_harmonics_method_closures_DN.ipynb  spherical_harmonics_method_closures_FPN.ipynb  spherical_harmonics_method_staggered_grid_2d.ipynb  spherical_harmonics_properties.ipynb  starmap.py  starmap_extension_3d.ipynb  starmap_extensions.ipynb  starmap_extensions_arte_study.ipynb  (+6 more)
python/notebooks/: SlicePlot.ipynb  Untitled.ipynb  advection_2d_anisotropic.ipynb  anisotropic_absorption_2d_discretization.ipynb  diffusion_1d.ipynb  isotropic_absorption_2d.ipynb  least_quares_pn_second_order_form_details.ipynb  least_quares_pn_with_finite_differences.ipynb  lspn.py  moment_expansion_2d.ipynb  moment_expansion_3d.ipynb  pnbuilder.py  problems.py  progress_report.ipynb  rbf_derivatives.ipynb  real valued pn - rte quantities expansion.ipynb  real valued pn - scattering term expansion.ipynb  self_adjoint_rte_operators.ipynb  sggx_sh.ipynb  simplePN.py  solver_problem_studies.ipynb  spherical_harmonics_method.ipynb  spherical_harmonics_method_closures_DN.ipynb  spherical_harmonics_properties.ipynb  (+11 more)
talk/: dkoerner_presentation7.pptx  notes.txt
(+159 files in other folders)
